# diplom_todolist

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: action.yaml
bot/: models.py  serializers.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_user.py  0003_alter_tguser_user.py
bot/tg/: client.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py
goals/: admin.py  models.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0006_alter_goalcategory_board.py
tests/: conftest.py  factories.py
tests/test_views/board/: create_test.py  delete_test.py  detail_test.py  list_test.py
tests/test_views/goal/: create_test.py  delete_test.py  detail_test.py  list_test.py  update_test.py
tests/test_views/goal_category/: create_test.py  detail_test.py  list_test.py
tests/test_views/goal_comment/: create_test.py  delete_test.py  list_test.py
todolist/: settings.py  urls.py
