[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "graduation project"
authors = ["Yuriy S. <trupakenator@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
